# video-intelligence

./: .env  .gitignore  README.md  pyproject.toml
demo/: demo.ipynb  robot_analysis_function.py  robot_frames.py
framework/: constants.py  frames.py  prefetcher.py  process_frames.py  split_video.py  utils.py
